# OS_Labs

./: .gitignore
Lab3/Lab3 C++11/src/: main.cpp  marker.cpp
Lab3/Lab3 C++11/tests/: test_marker.cpp
Lab3/Lab3 C++98/src/: main.cpp  marker.cpp  marker.h
Lab3/src/: MarkerData.h  main.cpp  marker.cpp
Lab3/tests/: test_marker.cpp
Mini-Colloquium/: CMakeLists.txt  Classes.h
Mini-Colloquium/tests/: CountingVisitor.h  SyncDecorator.h  tests.cpp
collocvium/: коллоквиум.md
colloquium/: коллоквиум.md
colloquium 2/: Singleton.cpp
colloquium 3/: Answer.md
lab1/: CMakeLists.txt
lab1/Creator/: CMakeLists.txt  creator.cpp
lab1/Main/: CMakeLists.txt  main.cpp
lab1/Reporter/: CMakeLists.txt  reporter.cpp
lab1/Shared/: Employee.h
lab2/lab2_C++11/: CMakeLists.txt
lab2/lab2_C++11/src/: main.cpp  my_threads.cpp
lab2/lab2_C++11/tests/: CMakeLists.txt  tests.cpp
lab2/lab2_C++98/src/: ArrayData.h  main.cpp  my_threads.cpp  my_threads.h
lab2/lab2_C++98/tests/: CMakeLists.txt  tests.cpp
lab2/src/: ArrayData.h  main.cpp  my_threads.cpp  my_threads.h
lab2/tests/: CMakeLists.txt  tests.cpp
lab4/lab4 14/Receiver/: Receiver.cpp  start.cpp
lab4/lab4 98/: CMakeLists.txt
lab4/lab4 98/Receiver/: Receiver.cpp  Receiver.h
lab4/lab4 98/Sender/: Sender.cpp  Sender.h  start.cpp
lab4/lab4 98/tests/: TestReceiverSender.cpp
lab5/Test files/: test1_cl1_in.txt  test1_cl1_true_out.txt  test1_server_in.txt  test2_cl0_out.txt  test2_cl1_in.txt  test2_cl1_true_out.txt  test2_server_in.txt
lab5/lab5 C++ 14/: CMakeLists.txt
lab5/lab5 C++ 14/Client/: Client.cpp  Client.h
lab5/lab5 C++ 14/Server/: Server.cpp  Server.h
lab5/lab5 C++ 14/tests/: test_runner.cpp
lab5/lab5 C++ 98/: CLientMain.cpp  CMakeLists.txt  ServerMain.cpp
lab5/lab5 C++ 98/Client/: Client.cpp  Client.h
lab5/lab5 C++ 98/Server/: Server.cpp  Server.h
lab5/lab5 C++ 98/Shared/: Employee.cpp  Employee.h
lab5/lab5 C++ 98/tests/: test_server.h
